@@ -1,5 +1,5 @@
-# safe-read.m4 serial 1
-dnl Copyright (C) 2002 Free Software Foundation, Inc.
+# safe-read.m4 serial 2
+dnl Copyright (C) 2002-2003 Free Software Foundation, Inc.
 dnl This file is free software, distributed under the terms of the GNU
 dnl General Public License.  As a special exception to the GNU General
 dnl Public License, this file may be distributed as part of a program
@@ -14,5 +14,6 @@ AC_DEFUN([gl_SAFE_READ],
 # Prerequisites of lib/safe-read.c.
 AC_DEFUN([gl_PREREQ_SAFE_READ],
 [
+  AC_REQUIRE([gt_TYPE_SSIZE_T])
   AC_CHECK_HEADERS_ONCE(unistd.h)
 ])
