@@ -1,4 +1,4 @@
-# xreadlink.m4 serial 2
+# xreadlink.m4 serial 3
 dnl Copyright (C) 2002, 2003 Free Software Foundation, Inc.
 dnl This file is free software, distributed under the terms of the GNU
 dnl General Public License.  As a special exception to the GNU General
@@ -9,5 +9,6 @@ dnl the same distribution terms as the rest of that program.
 AC_DEFUN([gl_XREADLINK],
 [
   dnl Prerequisites of lib/xreadlink.c.
+  AC_REQUIRE([gt_TYPE_SSIZE_T])
   AC_CHECK_HEADERS_ONCE(stdlib.h sys/types.h unistd.h)
 ])
